--- a/app.config
+++ b/app.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="TestRestLibrary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="TestRestLibrary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
@@ -11,238 +11,238 @@
                 <value>http://localhost:8001/dp2library/rest/</value>
             </setting>
             <setting name="login_userName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="login_password" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="writeRes_respath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getReaderInfo_barcode" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getReaderInfo_resultTypeList" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="setReaderInfo_action" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="setReaderInfo_resPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="setReaderInfo_newXml" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="setReaderInfo_oldXml" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="setReaderInfo_oldTimestamp" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="login_parameters" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="setLang_lang" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="verifyReaderPassword_readerBarcode" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="verifyReaderPassword_password" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="changeReaderPassword_readerBarcode" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="changeReaderPassword_password_old" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="changeReaderPassword_password_new" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="writeRes_ranges" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="writeRes_totalLength" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="writeRes_content" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="writeRes_metadata" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="writeRes_style" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="writeRes_inputTimestamp" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_queryWord" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_fromStyle" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_biblioDbNames" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_resultSetName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_matchStyle" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_perMax" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_lang" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_searchStyle" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchBiblio_outputStyle" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getSearchResult_resultsetName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getSearchResult_start" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getSearchResult_count" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getSearchResult_browseInfoStyle" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getSearchResult_lang" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchReader_queryWord" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchReader_from" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchReader_readerDbNames" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchReader_resultSetName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchReader_matchStyle" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchReader_perMax" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchReader_lang" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchReader_outputStyle" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getBiblioInfo_biblioRecPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getBiblioInfo_biblioType" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getItemInfo_barcode" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getItemInfo_resultType" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getItemInfo_biblioType" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getEntities_biblioRecPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getEntities_start" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getEntities_count" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getEntities_style" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getEntities_lang" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getBiblioSummary_itemBarcode" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getBiblioSummary_confirmItemRecPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getBiblioSummary_biblioRecPathExclude" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getOperLog_fileName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getOperLog_index" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getOperLog_hint" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getOperLog_attachmentFragmentStart" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getOperLog_attachmentFragmentLength" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getBrowseRecords_paths" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getBrowseRecords_browseInfoStyle" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="return_action" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="return_readerBarcode" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="return_itemBarcode" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="return_comfirmItemRecPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="return_style" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="return_itemFormatList" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="return_readerFormatList" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="return_biblioFormatList" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="passGate_readerBarcode" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="passGate_gateName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="passGate_resultTypeList" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getStatisInfo_dateRangeString" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getAuthorNumber_strAuthor" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="getAuthorNumber_bSelectPinyin" serializeAs="String">
                 <value>True</value>
@@ -255,4 +255,4 @@
             </setting>
         </TestRestLibrary.Properties.Settings>
     </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
